--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,6 +91,7 @@
     <script src="./assets/js/services/doctorAppointmentService.js"></script>
     <script src="./assets/js/services/modalAService.js"></script>
     <script src="./assets/js/services/servicesService.js"></script>
+    <script src="./assets/js/services/passwordService.js"></script>
     
 </body>
 </html>
