--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-expand-sm">
                 <a class="navbar-brand" href="#landingPage">Pearl</a>
                 <div class="collapse navbar-collapse justify-content-end" id="navigation">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav" id="tabs">
                         <li class="nav-item">
                             <a class="nav-link" href="#"></a>
                         </li>
@@ -78,20 +78,24 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script> 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
     <script src=https://cdn.datatables.net/2.0.3/js/dataTables.min.js></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     <script src="./assets/js/jquery.spapp.js"></script>
     <script src="./assets/js/jquery.spapp.min.js"></script>
     <script src="./assets/js/custom.js"></script> 
+
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     <script src="./assets/js/services/dataTableService.js"></script>
     <script src="./assets/js/services/doctorAppointmentService.js"></script>
     <script src="./assets/js/services/modalAService.js"></script>
     <script src="./assets/js/services/servicesService.js"></script>
     <script src="./assets/js/services/passwordService.js"></script>
-    
+    <script src="./utils/constants.js"></script>
+    <script src="./utils/utils.js"></script>
+    <script src="./utils/rest-client.js"></script>
+    <script src="./assets/js/services/user-service.js"></script>
 </body>
 </html>
